--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-navigation/drawer": "^6.7.0",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.10.0",
+    "@reduxjs/toolkit": "^2.2.6",
     "expo": "~51.0.18",
     "expo-status-bar": "~1.12.1",
     "formik": "^2.4.6",
@@ -19,6 +20,7 @@
     "react-native": "0.74.3",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
+    "react-redux": "^9.1.2",
     "yup": "^1.4.0"
   },
   "devDependencies": {
