--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
     "paths": {
       "@/components/*": ["./components/*"],
       "@/constants/*": ["./constants/*"],
-      "@/assets/*": ["./assets/*"]
+      "@/assets/*": ["./assets/*"],
+      "@/store/*": ["./store/*"]
     }
   }
 }
