--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-redux": "^9.1.2",
-    "yup": "^1.4.0"
+    "yup": "^1.4.0",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-reanimated": "~3.10.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
